test/libsolidity/syntaxTests/using/using_library_ast_file_level.sol
library L { }
using L for *;
// ----
// SyntaxError 8118: (14-28): The type has to be specified explicitly at file level (cannot use '*').
